--- a/ProAcc/Views/ProjectMonitor/PMTask.cshtml
+++ b/ProAcc/Views/ProjectMonitor/PMTask.cshtml
@@ -118,7 +118,7 @@
 
 <script>
     $('#Submit').click(function () {
-        debugger        
+        //debugger        
         var IDProject = $("#IDProject").val();        
         LoadTable(IDProject);
         $('#jqGrid').trigger('reloadGrid');
@@ -265,13 +265,13 @@
                         value: GetTaskName()
                     }
                 },
-                {
-                    label: 'Project', name: 'ProjectId', index: 'ProjectId', width: 100, editable: false, classes: 'wrapColumnText',
-                    cellEdit: true, edittype: 'select', formatter: 'select',
-                    editoptions: {
-                        value: GetProject()
-                    }
-                },
+                //{
+                //    label: 'Project', name: 'ProjectId', index: 'ProjectId', width: 100, editable: false, classes: 'wrapColumnText',
+                //    cellEdit: true, edittype: 'select', formatter: 'select',
+                //    editoptions: {
+                //        value: GetProject()
+                //    }
+                //},
                 {
                     label: 'Task Other Env. (Y/N)',
                     name: 'Task_Other_Environment', width: 55, editable: true,hidden: true ,
@@ -284,12 +284,12 @@
                     edittype: 'checkbox', editoptions: { value: "True:False" }, formatter: "checkbox",
                 },
                 { label: 'Pending With ', name: 'Pending', width: 100,  editable: true ,hidden: true},
-                {
-                    label: 'Delay', name: 'Delay_occurred', width: 30,  editable: true, align: 'center',
-                    edittype: 'checkbox',
-                    editoptions: { value: "True:False" }
-                    , formatter: "checkbox",
-                },
+                //{
+                //    label: 'Delay', name: 'Delay_occurred', width: 30,  editable: true, align: 'center',
+                //    edittype: 'checkbox',
+                //    editoptions: { value: "True:False" }
+                //    , formatter: "checkbox",
+                //},
                 //{
                 //    label: 'Owner', name: 'UserID', index: 'UserID', width: 75, align: 'center', editable: false,
                 //    cellEdit: true, edittype: 'select', formatter: 'select',
@@ -298,15 +298,15 @@
                 //    }
                 //},
                 {
-                    label: 'Status', name: 'StatusId', index: 'StatusId', width: 100,  align: 'center', editable: true,
+                    label: 'Status', name: 'StatusId', index: 'StatusId', width: 70,  align: 'center', editable: true,
                     cellEdit: true, edittype: 'select', formatter: 'select',
                     editoptions: {
                         value: GetStatusDropDown()
                     },
                 },
                 {
-                    label: 'Est.(hrs)', name: 'EST_hours', width: 55,
-                    editable: true,
+                    label: 'Est.(hrs)', name: 'EST_hours', width: 45,
+                    editable: true, align:'right',
                     editrules: { },
                     editoptions: {
                         dataInit: function (element) {
@@ -326,7 +326,7 @@
                 },
                 {
                     label: 'Actual (hrs)', name: 'Actual_St_hours',
-                    width: 55, editable: true,
+                    width: 45, editable: true,align:'right',
                     editoptions: {
                          dataInit: function (element) {
                             $(element).keyup(function (event) {
@@ -348,31 +348,31 @@
                 },
                 {
                     label: 'Planned Start Date', name: 'Planed__St_Date',
-                    width: 80, align: "center",  formatter: "date", formatoptions: { altFormat: "dd-mm-yy", newformat: "d/m/Y" }, editable: true,
+                    width: 60, align: "center",  formatter: "date", formatoptions: { altFormat: "dd-mm-yy", newformat: "d/m/Y" }, editable: true,
                     editoptions: { dataInit: Planed_StartDate, classes: 'DateClass' }
                 },
                 {
                     label: 'Actual Start Date', name: 'Actual_St_Date',
-                    width: 75, align: "center",  formatter: "date", formatoptions: { altFormat: "dd-mm-yy", newformat: "d/m/Y" }, editable: true,
+                    width: 60, align: "center",  formatter: "date", formatoptions: { altFormat: "dd-mm-yy", newformat: "d/m/Y" }, editable: true,
                     editoptions: { dataInit: Actual_St_Date, classes: 'DateClass' }
 
                 },
                 {
                     label: 'Planned End Date', name: 'Planed__En_Date',
-                    width: 75, align: "center", formatter: "date", formatoptions: { altFormat: "dd-mm-yy", newformat: "d/m/Y" }, editable: true,
+                    width: 60, align: "center", formatter: "date", formatoptions: { altFormat: "dd-mm-yy", newformat: "d/m/Y" }, editable: true,
 
                     editoptions: { dataInit: Planed_EndDate, classes: 'DateClass' }
                 },
                 {
                     label: 'Actual End Date', name: 'Actual_En_Date',
-                    width: 75, align: "center", formatter: "date", formatoptions: { altFormat: "dd-mm-yy", newformat: "d/m/Y" }, editable: true,
+                    width: 60, align: "center", formatter: "date", formatoptions: { altFormat: "dd-mm-yy", newformat: "d/m/Y" }, editable: true,
 
                     editoptions: { dataInit: Actual_En_Date, classes: 'DateClass' }
                 },
                 {
                     label: 'Comments', name: 'Notes', edittype: "textarea",classes: 'wrapColumnText',
                     wrap: "on"
-                    ,editrules: { "edithidden": true, required:true }, "editable": true, "width": 100,
+                    ,editrules: { "edithidden": true, required:true }, "editable": true, "width": 80,
                     editoptions: {
                         "class": "", "rows": 5, "wrap": "off", "style": "width:200px",
                     },
@@ -386,7 +386,7 @@
                 {
                     name: "",
                     label: "Actions",
-                    width: 65,
+                    width: 35,
                     align: "center",
                     formatter: "actions",
                     formatoptions: {
@@ -440,7 +440,7 @@
             altRows: true,
             //rownumbers : true,
             //multiselect : true,
-            width: 2000,
+            width: 1500,
             colMenu: false,
             menubar: false,
             viewrecords: true,
