--- a/ProAcc/Views/User/CreateUsers.cshtml
+++ b/ProAcc/Views/User/CreateUsers.cshtml
@@ -54,7 +54,7 @@
             <div class="form-group">
                 <label class="control-label col-md-8 required">Confirm Password</label>
                 <div class="col-md-10">
-                    <input type="password" class="form-control" onchange="validateConsPwd()" id="txtConsCnfmPassword" maxlength="8"/>
+                    <input type="password" class="form-control" id="txtConsCnfmPassword" maxlength="8"/>
                 </div>
                 <div>
                     &nbsp;&nbsp;&nbsp; <span class="Class_span" id="lblAltConsPwd" >&nbsp;</span>
@@ -178,7 +178,7 @@
                 //SubmitConsultant();
             }
             else {
-                $("#lblName1").html("");
+                $("#lblName1").html("").show();
                 SubmitConsultant();
             }
         });
@@ -268,22 +268,13 @@
                  e.preventDefault();
                  $("#lblMob1").html("Numbers Only").show().fadeOut("slow");
              }
+             else {
+                  $("#lblMob1").html("").show();
+             }
              SubmitConsultant();
          });
 
-        $("#txtMob").blur(function () {
-
-            phone = $(this).val();
-            phone = phone.replace(/[^0-9]/g,'');
-            if (phone.length != 10) {
-                $("#lblMob1").html("Phone number must be 10 digits").show().fadeOut(2000);
-                SubmitConsultant();
-            }
-            else {
-                $("#lblMob1").html("").hide();
-                SubmitConsultant();
-            }
-        });
+        
 
         //var input = document.querySelector("#txtMob"),
         //    errorMsg = document.querySelector("#error-msg"),
@@ -348,7 +339,7 @@
         });
 
        var typingTimer;                //timer identifier
-        var doneTypingInterval = 1000;  //time in ms, 1 second for example
+        var doneTypingInterval = 500;  //time in ms, 0.5 second for example
 
        // on keyup, start the countdown
          $('#Passwd').on('keyup', function () {
@@ -357,7 +348,7 @@
         });
 
         //on keydown, clear the countdown
-         $('#Passwd').on('keydown', function () {
+         $('#Passwd','#txtEmail1','#txtMob').on('keydown', function () {
           clearTimeout(typingTimer);
         });
 
@@ -375,6 +366,44 @@
             }
             SubmitConsultant()           
         }
+                
+        // on keyup, start the countdown
+        $('#txtEmail1').on('keyup', function () {
+            clearTimeout(typingTimer);
+            typingTimer = setTimeout(TaskEmail, doneTypingInterval);
+        });
+
+        function TaskEmail() {
+             var str = $("#txtEmail1").val();
+             var filter = /^([\w-\.]+)@@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.)|(([\w-]+\.)+))([a-zA-Z]{2,4}|[0-9]{1,3})(\]?)$/;
+
+            if (!filter.test(str)) {
+                $("#lblEmail1").html("Email is not valid").show().fadeOut(5000);
+            }
+            else {
+                $("#lblEmail1").html("");
+            }
+            SubmitConsultant()
+        }      
+
+        // on keyup, start the countdown
+        $('#txtMob').on('keyup', function () {
+            clearTimeout(typingTimer);
+            typingTimer = setTimeout(TaskPhone, doneTypingInterval);
+        });
+
+        function TaskPhone() {
+             phone = $("#txtMob").val();
+            phone = phone.replace(/[^0-9]/g,'');
+            if (phone.length != 10) {
+                $("#lblMob1").html("Phone number must be 10 digits").show().fadeOut(2000);
+            }
+            else {
+                $("#lblMob1").html("").show();
+            }
+            SubmitConsultant();
+        }
+
     });
 
 </script>
@@ -397,53 +426,8 @@
         SubmitConsultant();
     });
 
-    var result = "Success";
-
-    //function ValidateEmail1() {
-
-    //    var email1 = document.getElementById("txtEmail1").value;
-    //    var lblEmail1 = document.getElementById("lblEmail1");
-    //    lblEmail1.innerHTML = "";
-    //    var expr = /^([\w-\.]+)@@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.)|(([\w-]+\.)+))([a-zA-Z]{2,4}|[0-9]{1,3})(\]?)$/;
-    //    if (email1 = "" || !expr.test(email1)) {
-    //        lblEmail1.innerHTML = "Please enter valid email address.";
-    //        result = "error";
-    //    }
-    //    else {
-    //        result = "Success";
-    //    }
-    //    SubmitConsultant()
-    //}
-    $("#txtEmail1").on("focusout", function (event) {
-
-           var str = $(this).val();
-           var filter = /^([\w-\.]+)@@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.)|(([\w-]+\.)+))([a-zA-Z]{2,4}|[0-9]{1,3})(\]?)$/;
-
-        if (!filter.test(str)) {
-            $("#lblEmail1").html("Email is not valid").show().fadeOut(5000);
-        }
-        else {
-            $("#lblEmail1").html("");
-        }
-        SubmitConsultant()
-    });
-
-    //function validateConsPwd() {
-
-    //    var Passwd = document.getElementById("Passwd").value;
-    //    var txtConsCnfmPassword = document.getElementById("txtConsCnfmPassword").value;
-    //    var lblAltConsPwd = document.getElementById("lblAltConsPwd");
-    //    lblAltConsPwd.innerHTML = "";
-    //    if (Passwd != txtConsCnfmPassword) {
-    //        lblAltConsPwd.innerHTML = "password does not match";
-    //        result = "error";
-    //    }
-    //    else {
-    //        result = "Success";
-    //    }
-    //    SubmitConsultant()
-    //}
-
+   
+   
     $("#txtConsCnfmPassword").focusout(function () {
         var str = $("#Passwd").val().trim();
         var str1 = $("#txtConsCnfmPassword").val().trim();
