--- a/ProAcc/Views/ProjectMonitor/Monitor.cshtml
+++ b/ProAcc/Views/ProjectMonitor/Monitor.cshtml
@@ -888,7 +888,7 @@
     var Parameters = {};
     $.ajax({
         type: "POST",
-       url: '@Url.Action("GetBlock","Resource")',
+       url: '@Url.Action("GetBlock", "ProjectMonitor")',
         //data: '{Phase: ' + JSON.stringify(Phase) + ',condition:' + JSON.stringify(condition) + '}',
         dataType: "json",
 		async: false,
