--- a/ProAcc/Views/User/CreateUsers.cshtml
+++ b/ProAcc/Views/User/CreateUsers.cshtml
@@ -331,7 +331,7 @@
         $("#Passwd").on("keypress", function (e) {
             if (e.which === 44) {
                 e.preventDefault();
-                $("#lblPwd").html("Not Allowed").show().fadeOut(5000);
+                $("#lblPwd").html("Not Allowed").show().fadeOut(1000);
             }
             else {
                  $("#lblPwd").html("").show();
@@ -348,18 +348,19 @@
         });
 
         //on keydown, clear the countdown
-         $('#Passwd','#txtEmail1','#txtMob').on('keydown', function () {
+         $('#Passwd','#txtEmail1','#txtMob','#txtConsCnfmPassword').on('keydown', function () {
           clearTimeout(typingTimer);
         });
 
         function TaskPwd() {
+           
            var str = $("#Passwd").val();
             var filter = /^(?=.*\d)(?=.*[a-zA-Z])(?!.*\s).{6,8}$/;
-            if (str.length < 6 ||str.length > 8) {
-                 $("#lblPwd").html("Password char should be 6-8").show();
+            if (str.length < 6) {
+                 $("#lblPwd").html("password should contain 6-8 characters").show();
             }
             else if (!filter.test(str)) {
-                $("#lblPwd").html("Password contains atlease one special char and num").show();
+                $("#lblPwd").html("password should contain at least one character and a number").show();
             }
             else {
                 $("#lblPwd").html("");
@@ -378,10 +379,10 @@
              var filter = /^([\w-\.]+)@@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.)|(([\w-]+\.)+))([a-zA-Z]{2,4}|[0-9]{1,3})(\]?)$/;
 
             if (!filter.test(str)) {
-                $("#lblEmail1").html("Email is not valid").show().fadeOut(5000);
+                $("#lblEmail1").html("Email is not valid").show().fadeOut(1000);
             }
             else {
-                $("#lblEmail1").html("");
+                $("#lblEmail1").html("").show();
             }
             SubmitConsultant()
         }      
@@ -396,13 +397,35 @@
              phone = $("#txtMob").val();
             phone = phone.replace(/[^0-9]/g,'');
             if (phone.length != 10) {
-                $("#lblMob1").html("Phone number must be 10 digits").show().fadeOut(2000);
+                $("#lblMob1").html("Phone number must be 10 digits").show().fadeOut(1000);
             }
             else {
                 $("#lblMob1").html("").show();
             }
             SubmitConsultant();
         }
+
+        // on keyup, start the countdown
+        $('#txtConsCnfmPassword').on('keyup', function () {
+            clearTimeout(typingTimer);
+            typingTimer = setTimeout(TaskCnfmPassword, doneTypingInterval);
+        });
+
+        function TaskCnfmPassword() {
+            var str = $("#Passwd").val().trim();
+            var str1 = $("#txtConsCnfmPassword").val().trim();
+            if (str != str1) {
+                $("#lblAltConsPwd").html("Password Does not match kindly check").show().fadeOut(1000);
+            }
+            else {
+                $("#lblAltConsPwd").html("");
+            }
+            SubmitConsultant()
+        }
+
+        //$("#txtConsCnfmPassword").focusout(function () {
+        
+        //})
 
     });
 
@@ -428,17 +451,17 @@
 
    
    
-    $("#txtConsCnfmPassword").focusout(function () {
-        var str = $("#Passwd").val().trim();
-        var str1 = $("#txtConsCnfmPassword").val().trim();
-        if (str != str1) {
-            $("#lblAltConsPwd").html("Password Does not match kindly check").show().fadeOut(5000);
-        }
-        else {
-            $("#lblAltConsPwd").html("");
-        }
-         SubmitConsultant()
-    })
+    //$("#txtConsCnfmPassword").focusout(function () {
+    //    var str = $("#Passwd").val().trim();
+    //    var str1 = $("#txtConsCnfmPassword").val().trim();
+    //    if (str != str1) {
+    //        $("#lblAltConsPwd").html("Password Does not match kindly check").show().fadeOut(5000);
+    //    }
+    //    else {
+    //        $("#lblAltConsPwd").html("");
+    //    }
+    //     SubmitConsultant()
+    //})
 
     function SubmitConsultant() {
         //debugger;
