--- a/ProAcc/Views/Report/OverAllTaskReport.cshtml
+++ b/ProAcc/Views/Report/OverAllTaskReport.cshtml
@@ -370,13 +370,20 @@
         };
 
         $("#jqGrid").jqGrid({
-            url: "@Url.Action("GetData","Report")",
+            url: "@Url.Action("GetDataReport", "Report")",
             datatype: "json",
 
             colModel: [
                 {
                     label: 'Id', name: 'Id', index: 'Id', width: 70,
                     align: 'center', editable: true, hidden: true,
+                },
+                {
+                    label: 'Building Block', name: 'BuldingBlockID', index: 'BuldingBlockID', width: 100, editable: false, classes: 'wrapColumnText',
+                    cellEdit: true, edittype: 'select', formatter: 'select',
+                    editoptions: {
+                        value: GetBlock()
+                    }
                 },
                 {
                     label: 'Phase', name: 'PhaseId', index: 'PhaseId', width: 70,
@@ -444,26 +451,27 @@
                 },
                 { label: 'Pending With ', name: 'Pending', width: 100, editable: true, hidden: true },
                 {
-                    label: 'Delay', name: 'Delay_occurred', width: 58, align: 'center', editable: true, edittype: 'select',
-                    editoptions: {
-                        //defaultValue: 'N',
-                        //value: Delay_Data()
-                    },
-                    formatter: function (cellvalue, options, rowObject, action) {
-                        if (cellvalue) {
-                            return "Yes";
-                        } else {
-                            return "No";
-                        }
-                    }
-                
+                    label: 'Delay', name: 'Delay_occurred_Report', width: 58, align: 'center', editable: true
+                    //edittype: 'select',
+                    //editoptions: {
+                    //    //defaultValue: 'N',
+                    //    //value: Delay_Data()
+                    //},
+                    //formatter: function (cellvalue, options, rowObject, action) {
+                    //    if (cellvalue) {
+                    //        return "Yes";
+                    //    } else {
+                    //        return "No";
+                    //    }
+                    //}
+
                     //edittype: 'checkbox'
                     //editoptions: {
                     //    value: function (a) { debugger; }
                     //}
                     // formatter: "checkbox",
                     // editoptions: { value: "Yes:True:No" }
-                    
+
                     //editoptions: {
                     //    size: 15, maxlengh: 10,
                     //    dataInit: function (element) {
@@ -483,7 +491,7 @@
                         //defaultValue: 'N',
                         value: GetUserDropDown()
                     }
-                    
+
                 },
                 {
                     label: 'Status', name: 'StatusId', index: 'StatusId', width: 100,  align: 'center', editable: true,
@@ -688,7 +696,7 @@
 
             loadComplete: function () {
                 //alert("mm");
-                               
+
 
             },
             gridComplete: function () {
@@ -705,7 +713,7 @@
                     $("#jqGrid").jqGrid('setGridState', 'visible');
                 }
                 //Show_HideEdit();
-                
+
             }
             // set table stripped class in table style in bootsrap
         });
@@ -963,7 +971,7 @@
                     contentType: "application/json; charset=utf-8",
                     success: function (Data) {
                         for (var i = 0; i < Data.length; i++) {
-                          
+
                            var obj = {};
                              var ApplicationArea = Data[i].ApplicationArea;
                             var key = ""+Data[i].Id;
@@ -1138,7 +1146,29 @@
         }
         return Result;
     }
-  
+  function GetBlock() {
+    var Parameters = {};
+    $.ajax({
+        type: "POST",
+       url: '@Url.Action("GetBlock", "ProjectMonitor")',
+        //data: '{Phase: ' + JSON.stringify(Phase) + ',condition:' + JSON.stringify(condition) + '}',
+        dataType: "json",
+		async: false,
+        contentType: "application/json; charset=utf-8",
+        success: function (Data) {
+				for (var i = 0; i < Data.length; i++) {
+                var obj = {};
+                var Name = Data[i].Block_Name;
+                var key = "" + Data[i].block_ID;
+                Parameters[key] = Name;
+            }
+        },
+        error: function (data) {
+            alert("GetAllUser fail");
+        }
+    });
+	return Parameters;
+    }
     $("#export").on("click", function () {
         //debugger;
         var sessionValueProject_Name = $("#hdnSessionProject_Name").val();
@@ -1158,7 +1188,7 @@
             onBeforeExport: function (doc) {
                 //doc.content[0].table.headerRows = 2;
             }
-            //header_logo: "~/Asset/images/ProACCTool.png",            
+            //header_logo: "~/Asset/images/ProACCTool.png",
         })
     })
 </script>
