PROAC-482, Home Page modifications as per Demo

--- a/ProAcc/Views/IssueTrack/Index.cshtml
+++ b/ProAcc/Views/IssueTrack/Index.cshtml
@@ -137,7 +137,7 @@
                         value: GetInstanceDropDown()
                     }
                 },
-                { label: 'Issue Name', name: 'IssueName', index: 'IssueName', width: 150, editable: false ,align: "center",classes: 'wrapColumnText'},
+                { label: 'Issue Name', name: 'IssueName', index: 'IssueName', width: 150, editable: false ,classes: 'wrapColumnText'},
                 {
                     label: 'Status', name: 'Status', index: 'Status', width: 150,align: "center", editable: true, edittype: "select",classes: 'wrapColumnText',
                     editoptions: {
