--- a/ProAcc/Views/ProjectMonitor/Monitor.cshtml
+++ b/ProAcc/Views/ProjectMonitor/Monitor.cshtml
@@ -773,7 +773,7 @@
         if (UserType != 'Project Manager') {
              if (a==0) {
                  //Notiflix.Report.Info("ProAcc Info !", "You dont have any Task to Perform");
-                 Notiflix.Notify.Info( "You dont have any Task to Perform");
+                 Notiflix.Notify.Info("You dont have any Task to Perform", {timeout:2000});
              }
         }
        
