--- a/ProAcc/Views/Resource/ResourceAllocation.cshtml
+++ b/ProAcc/Views/Resource/ResourceAllocation.cshtml
@@ -226,7 +226,7 @@
                 //return [true];
             },
             loadComplete: function () {
-                $("#jqGrid").jqGrid("setLabel", "rn", "S.no");
+                $("#jqGrid").jqGrid("setLabel", "rn", "S.No");
             }
             // set table stripped class in table style in bootsrap
         });
