--- a/ProAcc/Views/Shared/_Layout.cshtml
+++ b/ProAcc/Views/Shared/_Layout.cshtml
@@ -444,11 +444,11 @@
                                                             <i class="metismenu-icon"> </i>FioriApps Report
                                                         </a>
                                                     </li>
-                                                    @*<li>
+                                                    <li>
                                                             <a href="@Url.Action("AssessmentReport", "Report")">
                                                                 <i class="metismenu-icon"> </i>Assessment Report
                                                             </a>
-                                                        </li>*@
+                                                        </li>
                                                 </ul>
                                             </li>
                                         </ul>
@@ -746,7 +746,7 @@
                     </div>
                 </div>
             </div>
-            <div class="app-main__outer" style="overflow:auto;height:535px;">
+            <div class="app-main__outer" style="overflow:auto;height:calc(100vh - 70px);">
                 <div class="app-main__inner">
                     <hr />
                     @RenderBody()
